--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <link rel="apple-touch-icon" href="icons/icon-192x192.png">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="icon" type="image/png" href="tatakae_icon_192x192.png" sizes="192x192">
+    <link rel="icon" type="image/png" href="tatakae_icon_512x512.png" sizes="512x512">
+
+    <link rel="apple-touch-icon" href="tatakae_icon_180x180.png">
 </head>
 <body>
     <header>
